--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "dependencies": {
     "react": "^0.14.8",
-    "react-native": "^0.24.1",
-    "react-native-css": "^1.2.40"
+    "react-native": "^0.24.1"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
